--- a/META.yml
+++ b/META.yml
@@ -5,11 +5,11 @@ author:
 build_requires:
   ExtUtils::MakeMaker: 0
   File::Find: 0
-  File::Spec: 0
   File::Spec::Functions: 0
   File::Temp: 0.19
   List::Util: 0
   Test::More: 0.96
+  Try::Tiny: 0.09
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
@@ -35,11 +35,11 @@ no_index:
 provides:
   App::csv2sqlite:
     file: lib/App/csv2sqlite.pm
-    version: 0.001
+    version: 0.002
 requires:
   DBD::SQLite: 1
   DBI: 1.6
-  DBIx::TableLoader::CSV: 1.100
+  DBIx::TableLoader::CSV: 1.101
   Getopt::Long: 2.34
   Moo: 1
   perl: 5.006
@@ -49,7 +49,7 @@ resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=App-csv2sqlite
   homepage: https://github.com/rwstauner/App-csv2sqlite
   repository: https://github.com/rwstauner/App-csv2sqlite.git
-version: 0.001
+version: 0.002
 x_Dist_Zilla:
   perl:
     version: 5.014002
@@ -57,7 +57,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Git::NextVersion
       name: '@Author::RWSTAUNER/Git::NextVersion'
-      version: 2.003
+      version: 2.005
     -
       class: Dist::Zilla::Plugin::GenerateFile
       name: '@Author::RWSTAUNER/GenerateManifestSkip'
@@ -277,19 +277,19 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Git::Check
       name: '@Author::RWSTAUNER/@Git/Check'
-      version: 2.003
+      version: 2.005
     -
       class: Dist::Zilla::Plugin::Git::Commit
       name: '@Author::RWSTAUNER/@Git/Commit'
-      version: 2.003
+      version: 2.005
     -
       class: Dist::Zilla::Plugin::Git::Tag
       name: '@Author::RWSTAUNER/@Git/Tag'
-      version: 2.003
+      version: 2.005
     -
       class: Dist::Zilla::Plugin::Git::Push
       name: '@Author::RWSTAUNER/@Git/Push'
-      version: 2.003
+      version: 2.005
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Author::RWSTAUNER/ConfirmRelease'
